fix weird fade issue on mobile

--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   z-index: var(--z-index-nav);
-  visibility: hidden;
+  display: none;
 
   --transition-duration: 300ms;
 }
@@ -22,12 +22,12 @@
     flex: none;
     position: static;
     top: 0;
-    visibility: visible;
+    display: block;
   }
 }
 
 .nav-container.is-active {
-  visibility: visible;
+  display: block;
 }
 
 .nav {
